Fix warnings in companion code using updated .settings for Java 8